[package]
name = "glow"
version = "0.4.0"
description = "GL on Whatever: a set of bindings to run GL anywhere (Open GL, OpenGL ES, and WebGL) and avoid target-specific code."
authors = ["Joshua Groves <josh@joshgroves.com>"]
homepage = "https://github.com/grovesNL/glow.git"
repository = "https://github.com/grovesNL/glow"
license = "MIT OR Apache-2.0"
build = "build.rs"
edition = "2018"

[lib]
name = "glow"
path = "src/lib.rs"

[features]
default = ["web-sys"]
web-sys = ["web_sys", "js-sys", "wasm-bindgen"]
stdweb = ["std_web", "webgl_stdweb"]

[target.'cfg(not(any(target_arch = "wasm32")))'.dependencies]
glutin = { version = "0.22.0", optional = true }
sdl2 = { version = "0.32", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { version = "~0.3", optional = true }
wasm-bindgen = { version = "~0.2", optional = true }
webgl_stdweb = { version = "0.3", optional = true }
slotmap = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies.std_web]
version = "0.4.18"
package = "stdweb"
optional = true

[target.'cfg(target_arch = "wasm32")'.dependencies.web_sys]
version = "~0.3.23"
package = "web-sys"
optional = true
features = [
  "Document",
  "Element",
  "HtmlCanvasElement",
  "HtmlImageElement",
  "ImageBitmap",
  "WebGlActiveInfo",
  "WebGlBuffer",
  "WebGlFramebuffer",
  "WebGlProgram",
  "WebGlRenderbuffer",
  "WebGlRenderingContext",
  "WebGl2RenderingContext",
  "WebGlSampler",
  "WebGlShader",
  "WebGlSync",
  "WebGlTexture",
  "WebGlUniformLocation",
  "WebGlVertexArrayObject",
  "Window",

  "AngleInstancedArrays",
  "ExtBlendMinmax",
  "ExtColorBufferFloat",
  "ExtColorBufferHalfFloat",
  "ExtDisjointTimerQuery",
  "ExtFragDepth",
  "ExtShaderTextureLod",
  "ExtSRgb",
  "ExtTextureFilterAnisotropic",
  "OesElementIndexUint",
  "OesStandardDerivatives",
  "OesTextureFloat",
  "OesTextureFloatLinear",
  "OesTextureHalfFloat",
  "OesTextureHalfFloatLinear",
  "OesVertexArrayObject",
  "WebglColorBufferFloat",
  "WebglCompressedTextureAstc",
  "WebglCompressedTextureEtc",
  "WebglCompressedTextureEtc1",
  "WebglCompressedTexturePvrtc",
  "WebglCompressedTextureS3tc",
  "WebglCompressedTextureS3tcSrgb",
  "WebglDebugRendererInfo",
  "WebglDebugShaders",
  "WebglDepthTexture",
  "WebglDrawBuffers",
  "WebglLoseContext",
]

[build-dependencies]
gl_generator = "0.13"

[workspace]
members = [
  "examples/hello",
]
