[package]
name = "glow"
version = "0.6.1"
description = "GL on Whatever: a set of bindings to run GL (Open GL, OpenGL ES, and WebGL) anywhere, and avoid target-specific code."
authors = [
  "Joshua Groves <josh@joshgroves.com>",
  "Dzmitry Malyshau <kvarkus@gmail.com>",
]
homepage = "https://github.com/grovesNL/glow.git"
repository = "https://github.com/grovesNL/glow"
license = "MIT OR Apache-2.0"
edition = "2018"

[package.metadata.docs.rs]
features = ["web-sys"]
default-target = "x86_64-unknown-linux-gnu"
targets = [
  "x86_64-unknown-linux-gnu",
  "x86_64-apple-darwin",
  "x86_64-pc-windows-msvc",
  "i686-unknown-linux-gnu",
  "i686-pc-windows-msvc",
  "wasm32-unknown-unknown"
]

[lib]
name = "glow"
path = "src/lib.rs"

[features]
default = ["web-sys"]
web-sys = ["web_sys", "js-sys", "wasm-bindgen"]
stdweb = ["std_web", "webgl_stdweb"]

[target.'cfg(not(any(target_arch = "wasm32")))'.dependencies]
glutin = { version = "0.24", optional = true }
sdl2 = { version = "0.33", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { version = "~0.3", optional = true }
wasm-bindgen = { version = "~0.2", optional = true }
webgl_stdweb = { version = "0.3", optional = true }
slotmap = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies.std_web]
version = "0.4.20"
package = "stdweb"
optional = true

[target.'cfg(target_arch = "wasm32")'.dependencies.web_sys]
version = "~0.3.37"
package = "web-sys"
optional = true
features = [
  "Document",
  "Element",
  "HtmlCanvasElement",
  "HtmlImageElement",
  "ImageBitmap",
  "WebGlActiveInfo",
  "WebGlBuffer",
  "WebGlFramebuffer",
  "WebGlProgram",
  "WebGlQuery",
  "WebGlRenderbuffer",
  "WebGlRenderingContext",
  "WebGl2RenderingContext",
  "WebGlSampler",
  "WebGlShader",
  "WebGlSync",
  "WebGlTexture",
  "WebGlTransformFeedback",
  "WebGlUniformLocation",
  "WebGlVertexArrayObject",
  "Window",

  "AngleInstancedArrays",
  "ExtBlendMinmax",
  "ExtColorBufferFloat",
  "ExtColorBufferHalfFloat",
  "ExtDisjointTimerQuery",
  "ExtFragDepth",
  "ExtShaderTextureLod",
  "ExtSRgb",
  "ExtTextureFilterAnisotropic",
  "OesElementIndexUint",
  "OesStandardDerivatives",
  "OesTextureFloat",
  "OesTextureFloatLinear",
  "OesTextureHalfFloat",
  "OesTextureHalfFloatLinear",
  "OesVertexArrayObject",
  "WebglColorBufferFloat",
  "WebglCompressedTextureAstc",
  "WebglCompressedTextureEtc",
  "WebglCompressedTextureEtc1",
  "WebglCompressedTexturePvrtc",
  "WebglCompressedTextureS3tc",
  "WebglCompressedTextureS3tcSrgb",
  "WebglDebugRendererInfo",
  "WebglDebugShaders",
  "WebglDepthTexture",
  "WebglDrawBuffers",
  "WebglLoseContext",
]

[workspace]
members = [
  "examples/hello",
]
