[package]
name = "hello"
version = "0.1.0"
edition = "2018"

[dependencies]
glow = { path = "../../" }

[target.'cfg(not(any(target_arch = "wasm32")))'.dependencies]
glutin = { version = "0.32.2", optional = true }
glutin-winit = { version = "0.5.0", optional = true }
winit = { version = "0.30.9", features = ["rwh_06"], optional = true }
raw-window-handle = { version = "0.6.2", optional = true }
sdl2 = { version = "0.37", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = [
    "HtmlCanvasElement",
    "WebGl2RenderingContext",
    "Window",
] }
wasm-bindgen = { version = "0.2" }

[features]
glutin_winit = ["glutin", "glutin-winit", "winit", "raw-window-handle"]
